# Sleipnir

./: .gitignore  Cargo.toml  README.md  chandrian_fuzz_pool.jsonl  statusofproject.md  stress_test.py  test_agent.py
DOUCMENTS/: PDR.MD  SAD.md  test_plan.md
sleipnir-client/: Cargo.toml  mock_agent.py
sleipnir-client/src/: lib.rs
sleipnir-core/: Cargo.toml
sleipnir-core/src/: errors.rs  models.rs
sleipnir-daemon/: Cargo.toml
sleipnir-daemon/src/: main.rs  server.rs  server_test.rs  ui.rs
